--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html
 body
 {
     background-color: #E2E0E0;
-    font-family: Helvetica, sans-serif, Arial;
+    font-family: Garamond, Georgia, Helvetica, sans-serif, Arial;
     font-size: 16px;
     line-height: 35px;
     font-weight: 400;
